<resources>
    <string name="app_name">P09-NDPSongs</string>
    <string name="songTitle">Song Title</string>
    <string name="enterSong">Enter song title here</string>
    <string name="singer">Singers</string>
    <string name="enterSinger">Enter singers name here</string>
    <string name="year">Year</string>
    <string name="enterYear">Enter year of release here</string>
    <string name="stars">Stars</string>
    <string name="insert">Insert</string>
    <string name="showList">Show List</string>
    <string name="showSongfiveStar">Show all songs with 5 stars</string>
    <string-array name="year">
        <item>Year release</item>
    </string-array>
</resources>